2003-11-30 Jim Garlick <garlick@llnl.gov>

    * src/powerman.c: handle partial reads on powermand socket.
    Fixes the very occasional 'unexpected response from server' errors.

    * src/powerman.c: don't initiate connect to server until options
    have been validated (avoids 'client read returned EOF' messages
    from server when someone mistypes a command).

    * src/client_proto.h, src/client.c: add connect_state to device query
    output.

    * test/vpcd.c, test/mkconf.pl, etc/vpc.dev: change vpcd plugs from 8 to 16.

    * src/pty.c: fixed _ptym_open to work beyond 176 ptys on Linux (up to 256).

    * test/Makefile: targets for testing scalability

    * test/testing.txt: added.

    * src/Makefile, src/debug.h: make dbg() macro a noop out if NDEBUG defined.

2003-11-28 Jim Garlick <garlick@llnl.gov>

    * src/wrappers.c, src/powerman.c, src/device_tcp.c: make Connect()
    non-fatal on ECONNREFUSED.

    * src/powermand.c: make daemonization happen after cli_listen() so
    errors about binding to the powermand port are reported on stderr.

    * src/pty.c: rework error handling.

2003-11-24 Jim Garlick <garlick@llnl.gov>

    * src/parse.y: add ability to put hostlists in 'node' line.
    If hardwired plug names, plug names are assigned in order.
    If not, plug names are set equal to node names.
    This should substantially reduce the size of powerman.conf files on 
    large clusters.

    * test/vpcd.c: add --foreground option for running on a pty.

    * test/TESTRIG: removed

    * test/mkconf.pl: added

2003-10-29 Albert Chu <chu11@llnl.gov>

    * etc/ipmipower.dev: Added "failed to connect" to query checks.

2003-10-17 Albert Chu <chu11@llnl.gov>
	
    * etc/ipmipower.dev: New File

    * man/powerman.1: 
    Added info about HOST RANGES under tcsh.	
    Fixed typo in powerman examples.

    * Makefile: Install new ipmipower.dev file.	
	
2003-10-16 Jim Garlick <garlick@llnl.gov>
