@@ -33,8 +33,8 @@ void cli_fini(void);
 void cli_listen(void);
 int cli_listen_fd(void);
 
-void cli_post_select(fd_set * rset, fd_set * wset);
-void cli_pre_select(fd_set * rset, fd_set * wset, int *maxfd);
+void cli_post_poll(Pollfd_t pfd);
+void cli_pre_poll(Pollfd_t pfd);
 
 #endif                          /* CLIENT_H */
 
