@@ -38,10 +38,10 @@
 
 #include "powerman.h"
 #include "parse_util.h"
+#include "wrappers.h"
 #include "device.h"
 #include "device_serial.h"
 #include "error.h"
-#include "wrappers.h"
 #include "debug.h"
 
 typedef struct {
